--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "3000:3000"
     volumes:
       - .:/usr/src/app
-      # - /usr/src/app/node_modules
+      - /usr/src/app/node_modules
     environment:
       NODE_ENV: development
     restart: always
