--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,13 @@
 {
+  "name": "toolbox",
+  "version": "1.0.0",
+  "main": "./src/index.js",
+  "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/index.ts",
-    "build": "tsc",
+    "dev": "nodemon src/index.js",
     "start": "node dist/index.js",
-    "lint": "standard src/**/*.ts",
-    "lint:fix": "standard --fix src/**/*.ts"
+    "lint": "standard src/**/*.js",
+    "lint:fix": "standard --fix src/**/*.js"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -13,11 +16,8 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.10.7",
-    "standard": "^17.1.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.3"
+    "nodemon": "^3.1.9",
+    "standard": "^17.1.2"
   },
   "standard": {
     "env": {
