--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "frontend": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
